; ModuleID = '/home/carl/AnghaBench/RetroArch/extr_retroarch.c_command_event_disable_overrides.c'
source_filename = "/home/carl/AnghaBench/RetroArch/extr_retroarch.c_command_event_disable_overrides.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@runloop_overrides_active = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @command_event_disable_overrides to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @command_event_disable_overrides() #0 {
  %1 = load i32, i32* @runloop_overrides_active, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %4, label %3

3:                                                ; preds = %0
  br label %6

4:                                                ; preds = %0
  %5 = call i32 (...) @config_unload_override()
  store i32 0, i32* @runloop_overrides_active, align 4
  br label %6

6:                                                ; preds = %4, %3
  ret void
}

declare dso_local i32 @config_unload_override(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
